fix locationinput input line height, so clicking doesnt jump to the start

--- a/src/c3nav/site/static/site/css/c3nav.css
+++ b/src/c3nav/site/static/site/css/c3nav.css
@@ -119,6 +119,7 @@ main.map {
     border-width:0;
     height: 54px;
     transition: padding-bottom 150ms;
+    line-height:2.5;
 }
 .locationinput small {
     position: absolute;
